; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/display/dc/core/extr_dc_link.c_link_disconnect_remap.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/display/dc/core/extr_dc_link.c_link_disconnect_remap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dc_sink = type { i32 }
%struct.dc_link = type { %struct.dc_sink* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.dc_sink*, %struct.dc_link*)* @link_disconnect_remap to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @link_disconnect_remap(%struct.dc_sink* %0, %struct.dc_link* %1) #0 {
  %3 = alloca %struct.dc_sink*, align 8
  %4 = alloca %struct.dc_link*, align 8
  store %struct.dc_sink* %0, %struct.dc_sink** %3, align 8
  store %struct.dc_link* %1, %struct.dc_link** %4, align 8
  %5 = load %struct.dc_link*, %struct.dc_link** %4, align 8
  %6 = getelementptr inbounds %struct.dc_link, %struct.dc_link* %5, i32 0, i32 0
  %7 = load %struct.dc_sink*, %struct.dc_sink** %6, align 8
  %8 = call i32 @dc_sink_release(%struct.dc_sink* %7)
  %9 = load %struct.dc_sink*, %struct.dc_sink** %3, align 8
  %10 = load %struct.dc_link*, %struct.dc_link** %4, align 8
  %11 = getelementptr inbounds %struct.dc_link, %struct.dc_link* %10, i32 0, i32 0
  store %struct.dc_sink* %9, %struct.dc_sink** %11, align 8
  ret void
}

declare dso_local i32 @dc_sink_release(%struct.dc_sink*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
